--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,8 +1,9 @@
 disabled_rules:
   - line_length
-  - variable_name
   - file_length
   - function_body_length
-  - opening_brace
   - type_body_length
   - valid_docs
+excluded:
+  - Carthage
+  - Pods
